--- a/index.html
+++ b/index.html
@@ -7,24 +7,24 @@
     <title>Atlanta - Calculadora Penal</title>
     <link rel="icon" href="img/favicon.png">
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="juridicorevoada.com/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://juridicorevoada.com/css/bootstrap.min.css">
     <!-- animate CSS -->
-    <link rel="stylesheet" href="juridicorevoada.com/css/bootstrap.min.csscss/animate.css">
+    <link rel="stylesheet" href="https://juridicorevoada.com/css/animate.css">
     <!-- owl carousel CSS -->
-    <link rel="stylesheet" href="juridicorevoada.com/css/bootstrap.min.csscss/owl.carousel.min.css">
+    <link rel="stylesheet" href="https://juridicorevoada.com/css/owl.carousel.min.css">
     <!-- themify CSS -->
-    <link rel="stylesheet" href="juridicorevoada.com/css/bootstrap.min.csscss/themify-icons.css">
+    <link rel="stylesheet" href="https://juridicorevoada.com/css/themify-icons.css">
     <!-- flaticon CSS -->
-    <link rel="stylesheet" href="juridicorevoada.com/css/bootstrap.min.csscss/flaticon.css">
+    <link rel="stylesheet" href="https://juridicorevoada.com/css/flaticon.css">
     <!-- font awesome CSS -->
-    <link rel="stylesheet" href="juridicorevoada.com/css/bootstrap.min.csscss/magnific-popup.css">
+    <link rel="stylesheet" href="https://juridicorevoada.com/css/magnific-popup.css">
     <!-- swiper CSS -->
-    <link rel="stylesheet" href="juridicorevoada.com/css/bootstrap.min.csscss/slick.css">
-    <link rel="stylesheet" href="juridicorevoada.com/css/bootstrap.min.csscss/gijgo.min.css">
-    <link rel="stylesheet" href="juridicorevoada.com/css/bootstrap.min.csscss/nice-select.css">
-    <link rel="stylesheet" href="juridicorevoada.com/css/bootstrap.min.csscss/all.css">
+    <link rel="stylesheet" href="https://juridicorevoada.com/css/slick.css">
+    <link rel="stylesheet" href="https://juridicorevoada.com/css/gijgo.min.css">
+    <link rel="stylesheet" href="https://juridicorevoada.com/css/nice-select.css">
+    <link rel="stylesheet" href="https://juridicorevoada.com/css/all.css">
     <!-- style CSS -->
-    <link rel="stylesheet" href="juridicorevoada.com/css/bootstrap.min.csscss/style.css">
+    <link rel="stylesheet" href="https://juridicorevoada.com/css/style.css">
 </head>
 
 <body>
