--- a/index.html
+++ b/index.html
@@ -1068,26 +1068,26 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> Todos
 
    <!-- jquery plugins here-->
    <!-- jquery -->
-   <script src="juridicorevoada.com/js/jquery-1.12.1.min.js"></script>
+   <script src="https://juridicorevoada.com/js/jquery-1.12.1.min.js"></script>
    <!-- popper js -->
-   <script src="juridicorevoada.com/js/popper.min.js"></script>
-   <script src="juridicorevoada.com/js/sweetalert2.js"></script>
+   <script src="https://juridicorevoada.com/js/popper.min.js"></script>
+   <script src="https://juridicorevoada.com/js/sweetalert2.js"></script>
    <!-- bootstrap js -->
-   <script src="juridicorevoada.com/js/bootstrap.min.js"></script>
+   <script src="https://juridicorevoada.com/js/bootstrap.min.js"></script>
    <!-- easing js -->
-   <script src="juridicorevoada.com/js/jquery.magnific-popup.js"></script>
+   <script src="https://juridicorevoada.com/js/jquery.magnific-popup.js"></script>
    <!-- swiper js -->
-   <script src="juridicorevoada.com/js/swiper.min.js"></script>
+   <script src="https://juridicorevoada.com/js/swiper.min.js"></script>
    <!-- swiper js -->
-   <script src="juridicorevoada.com/js/masonry.pkgd.js"></script>
+   <script src="https://juridicorevoada.com/js/masonry.pkgd.js"></script>
    <!-- particles js -->
-   <script src="juridicorevoada.com/js/owl.carousel.min.js"></script>
+   <script src="https://juridicorevoada.com/js/owl.carousel.min.js"></script>
    <!-- swiper js -->
-   <script src="juridicorevoada.com/js/slick.min.js"></script>
-   <script src="juridicorevoada.com/js/gijgo.min.js"></script>
-   <script src="juridicorevoada.com/js/jquery.nice-select.min.js"></script>
+   <script src="https://juridicorevoada.com/js/slick.min.js"></script>
+   <script src="https://juridicorevoada.com/js/gijgo.min.js"></script>
+   <script src="https://juridicorevoada.com/js/jquery.nice-select.min.js"></script>
    <!-- custom js -->
-   <script src="juridicorevoada.com/js/custom.js"></script>
+   <script src="https://juridicorevoada.com/js/custom.js"></script>
 </body>
 
 </html>
