--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Atlanta - Calculadora Penal</title>
     <link rel="icon" href="img/favicon.png">
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://juridicorevoada.com/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/bootstrap.min.css">
     <!-- animate CSS -->
     <link rel="stylesheet" href="https://juridicorevoada.com/css/animate.css">
     <!-- owl carousel CSS -->
