--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <link rel="stylesheet" href="https://juridicorevoada.com/css/nice-select.css">
     <link rel="stylesheet" href="https://juridicorevoada.com/css/all.css">
     <!-- style CSS -->
-    <link rel="stylesheet" href="https://juridicorevoada.com/css/style.css">
+    <link rel="stylesheet" href="/style.css">
 </head>
 
 <body>
