--- a/calc.html
+++ b/calc.html
@@ -284,7 +284,7 @@ label{
  
  
     <title>Calculadora Penal - Fusion RJ</title>
-    <link rel="icon" type="image/x-icon" href="https://i.imgur.com/p43P4H6.png">
+    <link rel="icon" type="image/x-icon" href="/atlanta-log2o_vermelho.png">
     <script src="https://policiafusion.com.br/app/assets/js/sweetalert2.js"></script>
 </head>    
  
